# capstone-project-hello-boyos

./: .flaskenv  .gitignore  Makefile  README.md  pyproject.toml  scraper.py  setup.py
backend/: __init__.py  base.py  book.py  collection.py  config.py  db_setup.py  errors.py  following.py  genre.py  inCollection.py  review.py  routes.py  user.py  usergoal.py  utils.py
backend/auth/: __init__.py  routes.py
backend/book/: __init__.py  routes.py  utils.py
backend/collection/: __init__.py  routes.py  utils.py
backend/database/: data.sql  db_setup.py  jsonToSchema.py  json_to_db.py  schema.sql
backend/goals/: __init__.py  routes.py  utils.py
backend/model/: author.py  base.py  book.py  collection.py  collection_membership.py  followers.py  genre.py  inCollection.py  in_collection.py  reader.py  reader_goal.py  review.py  schema.py  user.py  user_goal.py
backend/recommendation/: __init__.py  content_recommender.py  routes.py  utils.py
backend/search/: __init__.py  routes.py
backend/user/: __init__.py  routes.py  utils.py
flask_app/: __init__.py  config.py
frontend/: =2.8.0  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  BookDetailsContext.js  LoginContext.js  Main.js  fetchFunctions.js  index.js
frontend/src/components/: AddBookModal.js  AddReview.js  BlindCover.js  BookCard.js  Collection.js  CollectionItem.js  DropDownItem.js  DropDownList.js  Error.js  ErrorPage.js  FollowButton.js  FollowList.js  LoadingSpinner.js  NavBar.js  PrivateRoute.js  ReviewList.js  ReviewListItem.js  SearchResults.js  SearchResultsItem.js  UserSearchResults.js  UserSearchResultsItem.js
frontend/src/components/Admin/: AdminBookItem.js  AdminBookList.js
frontend/src/components/Auth/: PrivateRoute.js
frontend/src/components/Books/: AddBookModal.js  BlindCover.js  BookCard.js  BookList.js
frontend/src/components/CollectionList/: AddCollection.js  CollectionList.js  CollectionListItem.js
frontend/src/pages/: AddReview.js  Admin.js  AdminAddBook.css  BookPage.js  CreateAccount.js  Discover.js  Home.js  Login.js  Logout.js  Recommend.js  Reviews.js  Search.js  UserHome.js  UserPage.js  UserSearch.js  YearPicker.css
test/: test_api.py  test_followers.py
work_diaries/: z5161697.md  z5162819.txt  z5165717.md  z5165717.txt  z5205505.txt  z5207435.txt
(+25 files in other folders)
