[tool.poetry]
name = "ReadRecommend"
version = "0.1.0"
description = ""
authors = ["Felix <felix.lonergan@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8.3"
flask = "^1.1.2"
black = "^19.10b0"
pylint = "^2.5.2"
psycopg2 = "^2.8.5"
SQLAlchemy = "^1.3.17"
flask-restful = "^0.3.8"
requests = "^2.24.0"
beautifulsoup4 = "^4.9.1"
tqdm = "^4.46.1"
python-dotenv = "^0.13.0"
Flask-SQLAlchemy = "^2.4.3"
flask-marshmallow = "^0.13.0"
marshmallow-sqlalchemy = "^0.23.1"
flask_cors = "^3.0.8"
pylint-flask = "^0.6"
flask-buzz = "^0.1.15"
pendulum = "2.0.5"
flask-praetorian = {git = "https://github.com/dusktreader/flask-praetorian"}
pandas = "^1.0.5"
numpy = "^1.19.1"
scikit-learn = "^0.23.1"
nltk = "^3.5"
pyarrow = "^1.0.0"
colorama = "^0.4.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^19.10b0", allow-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
